Moving rainbow placeholder

--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <title>John Ellis</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <a href="https://github.com/johnellis0" target="_blank">
+        <ul id="name">
+            <li>j</li><li>o</li><li>h</li><li>n</li>
+            <li>e</li><li>l</li><li>l</li><li>i</li><li>s</li>
+        </ul>
+    </a>
 </body>
 </html>
