minimalistic monospace skeleton

--- a/index.html
+++ b/index.html
@@ -1,16 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>John Ellis</title>
-    <link rel="stylesheet" href="style.css">
+
+    <meta name="author" content="John Ellis">
+    <meta name="description" content="JohnEllis.dev Personal Portfolio Site">
+    <meta name="keywords" content="John Ellis, John Ellis Portfolio, John, Portfolio">
+
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    <a href="https://github.com/johnellis0" target="_blank">
-        <ul id="name">
-            <li>j</li><li>o</li><li>h</li><li>n</li>
-            <li>e</li><li>l</li><li>l</li><li>i</li><li>s</li>
-        </ul>
-    </a>
+<header>
+    <h1><a href="index.html">JOHN ELLIS</a></h1>
+    <div class="links">
+        <a href="https://github.com/johnellis0">GitHub</a>
+        <a href="#">LinkedIn</a>
+    </div>
+    <hr>
+</header>
+
+<main>
+    <section>
+        <h1>Work</h1>
+    </section>
+
+    <section>
+        <h1>Projects</h1>
+    </section>
+</main>
 </body>
+
 </html>
