Refactor assets into subfolders

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="JohnEllis.dev Personal Portfolio Site">
     <meta name="keywords" content="John Ellis, John Ellis Portfolio, John, Portfolio">
 
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
