Project cards skeleton

--- a/work/acs.html
+++ b/work/acs.html
@@ -9,8 +9,7 @@
     <meta name="description" content="JohnEllis.dev Personal Portfolio Site">
     <meta name="keywords" content="John Ellis, John Ellis Portfolio, John, Portfolio">
 
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/projects.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -24,20 +23,10 @@
 </header>
 
 <main>
-    <section>
-        <h1>Work</h1>
-
-        <article>
-            <h1>Maintenance Requests Reporting System</h1>
-            <p class="company">Accommodation and Commercial Services, The University of Sheffield</p>
-            <p>Implemented a Google Scripts project to enhance the exising maintenance tracking system.</p>
-        </article>
-
-    </section>
-
-    <section>
-        <h1>Projects</h1>
-    </section>
+    <article>
+        <h1>Maintenance Requests Reporting System</h1>
+        <p>Accommodation and Commercial Services, The University of Sheffield</p>
+    </article>
 </main>
 </body>
 
