Refactor CSS into different files for body/header/projects

--- a/index.html
+++ b/index.html
@@ -9,34 +9,50 @@
     <meta name="description" content="JohnEllis.dev Personal Portfolio Site">
     <meta name="keywords" content="John Ellis, John Ellis Portfolio, John, Portfolio">
 
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/stylesheet.css">
+    <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/projects.css">
+
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js"></script>
 </head>
 
 <body>
 <header>
     <h1><a href="index.html">JOHN ELLIS</a></h1>
+    <p>Software Engineering, The University of Sheffield</p>
     <div class="links">
-        <a href="https://github.com/johnellis0">GitHub</a>
-        <a href="#">LinkedIn</a>
+        <a href="https://github.com/johnellis0" class="link" target="_blank" rel="noopener noreferrer">
+            <span class="iconify" data-icon="logos-github-icon" data-inline="false"></span>GitHub</a>
+        <!-- <a href="#" class="link" target="_blank" rel="noopener noreferrer" >LinkedIn</a> -->
     </div>
     <hr>
 </header>
 
 <main>
     <section>
-        <h1>Work</h1>
+        <h2>Work Projects</h2>
 
         <article>
-            <h1>Maintenance Requests Reporting System</h1>
-            <p class="company">Accommodation and Commercial Services, The University of Sheffield</p>
-            <p>Implemented a Google Scripts project to enhance the exising maintenance tracking system.</p>
+            <div>
+                <h3>Maintenance Requests Reporting System</h3>
+                <p class="company">Accommodation and Commercial Services, The University of Sheffield</p>
+                <p>Implemented a Google Scripts project to enhance the exising maintenance tracking system.</p>
+
+            </div>
+            <aside>
+                <a href="#" class="link">Case Study</a>
+
+                <a href="https://github.com/johnellis0/gs-sheets-form-utils" class="link" target="_blank" rel="noopener noreferrer" >
+                    <span class="iconify" data-icon="logos-github-icon" data-inline="false"></span>
+                    gs-sheets-form-utils
+                </a>
+            </aside>
         </article>
 
     </section>
 
     <section>
-        <h1>Projects</h1>
+        <h2>Personal Projects</h2>
     </section>
 </main>
 </body>
