--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <meta name="description" content="JohnEllis.dev Personal Portfolio Site">
     <meta name="keywords" content="John Ellis, John Ellis Portfolio, John, Portfolio">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#FFFFFF"/>
+
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="stylesheet" href="css/header.css">
 
