Preconnect to google fonts

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="theme-color" content="#FFFFFF"/>
 
+    <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin>
+
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="stylesheet" href="css/header.css">
 
