Viewport meta & font preconnect

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <meta name="description" content="JohnEllis.dev Personal Portfolio Site">
     <meta name="keywords" content="John Ellis, John Ellis Portfolio, John, Portfolio">
 
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#FFFFFF"/>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin>
+
     <link rel="stylesheet" href="css/stylesheet.css">
     <link rel="stylesheet" href="css/header.css">
     <link rel="stylesheet" href="css/projects.css">
