--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
 
         <article>
             <div>
-                <h3>Maintenance Requests Reporting System</h3>
+                <h3>Customer Services Maintenance Requests System</h3>
                 <p class="company">Accommodation and Commercial Services, The University of Sheffield</p>
-                <p>Implemented a Google Scripts project to enhance the exising maintenance tracking system.</p>
+                <p>Implemented a Google Scripts project to enhance the existing maintenance tracking system.</p>
 
             </div>
             <aside>
