--- a/index.html
+++ b/index.html
@@ -1,65 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
+---
+layout: default
+title: Home | John Ellis
+---
+<section>
+    <h2>Work Projects</h2>
 
-<head>
-    <meta charset="UTF-8">
-    <title>John Ellis</title>
+    <article>
+        <div>
+            <h3>Customer Services Maintenance Requests System</h3>
+            <p class="company">Accommodation and Commercial Services, The University of Sheffield</p>
+            <p>Implemented a Google Scripts project to enhance the existing maintenance tracking system.</p>
 
-    <meta name="author" content="John Ellis">
-    <meta name="description" content="JohnEllis.dev Personal Portfolio Site">
-    <meta name="keywords" content="John Ellis, John Ellis Portfolio, John, Portfolio">
+        </div>
+        <aside>
+            <a href="#" class="link">Case Study</a>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="theme-color" content="#FFFFFF"/>
+            <a href="https://github.com/johnellis0/gs-sheets-form-utils" class="link" target="_blank" rel="noopener noreferrer" >
+                <span class="iconify" data-icon="logos-github-icon" data-inline="false"></span>
+                gs-sheets-form-utils
+            </a>
+        </aside>
+    </article>
 
-    <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin>
+</section>
 
-    <link rel="stylesheet" href="css/stylesheet.css">
-    <link rel="stylesheet" href="css/header.css">
-    <link rel="stylesheet" href="css/projects.css">
-
-    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js" defer></script>
-</head>
-
-<body>
-<header>
-    <h1><a href="index.html">JOHN ELLIS</a></h1>
-    <p>Software Engineering, The University of Sheffield</p>
-    <div class="links">
-        <a href="https://github.com/johnellis0" class="link" target="_blank" rel="noopener noreferrer">
-            <span class="iconify" data-icon="logos-github-icon" data-inline="false"></span>GitHub</a>
-        <!-- <a href="#" class="link" target="_blank" rel="noopener noreferrer" >LinkedIn</a> -->
-    </div>
-    <hr>
-</header>
-
-<main>
-    <section>
-        <h2>Work Projects</h2>
-
-        <article>
-            <div>
-                <h3>Customer Services Maintenance Requests System</h3>
-                <p class="company">Accommodation and Commercial Services, The University of Sheffield</p>
-                <p>Implemented a Google Scripts project to enhance the existing maintenance tracking system.</p>
-
-            </div>
-            <aside>
-                <a href="#" class="link">Case Study</a>
-
-                <a href="https://github.com/johnellis0/gs-sheets-form-utils" class="link" target="_blank" rel="noopener noreferrer" >
-                    <span class="iconify" data-icon="logos-github-icon" data-inline="false"></span>
-                    gs-sheets-form-utils
-                </a>
-            </aside>
-        </article>
-
-    </section>
-
-    <section>
-        <h2>Personal Projects</h2>
-    </section>
-</main>
-</body>
-
-</html>
+<section>
+    <h2>Personal Projects</h2>
+</section>
