--- a/index.html
+++ b/index.html
@@ -6,25 +6,7 @@ title: Home | John Ellis
     <h2>Work Projects</h2>
 
     {% for project in site.work %}
-    <article>
-        <div>
-            <h3>
-                <a class="link" href="{{ project.url }}">
-                    {{ project.project_title }}
-                </a>
-            </h3>
-            <p class="company">{{ project.client }}</p>
-            <p>{{ project.summary }}</p>
-        </div>
-        <!--<aside>
-            <a href="#" class="link">Case Study</a>
-
-            <a href="https://github.com/johnellis0/gs-sheets-form-utils" class="link" target="_blank" rel="noopener noreferrer" >
-                <span class="iconify" data-icon="logos-github-icon" data-inline="false"></span>
-                gs-sheets-form-utils
-            </a>
-        </aside>-->
-    </article>
+        {% include project_summary.html project=project %}
     {% endfor %}
 
 </section>
