Only show sections if there are existing posts

--- a/index.html
+++ b/index.html
@@ -1,18 +1,22 @@
 ---
 layout: default
 ---
-<section>
-    <h2>Work</h2>
+{% if site.work.size > 0 %}
+    <section>
+        <h2>Work</h2>
 
-    {% for project in site.work %}
-        {% include project_summary.html project=project %}
-    {% endfor %}
-</section>
+        {% for project in site.work %}
+            {% include project_summary.html project=project %}
+        {% endfor %}
+    </section>
+{% endif %}
 
-<section>
-    <h2>Projects</h2>
+{% if site.personal.size > 0 %}
+    <section>
+        <h2>Projects</h2>
 
-    {% for project in site.personal %}
-        {% include project_summary.html project=project %}
-    {% endfor %}
-</section>
+        {% for project in site.personal %}
+            {% include project_summary.html project=project %}
+        {% endfor %}
+    </section>
+{% endif %}
