--- a/index.html
+++ b/index.html
@@ -1,22 +1,45 @@
 ---
-layout: default
 ---
-{% if site.work.size > 0 %}
-    <section>
-        <h2>Work</h2>
+<!DOCTYPE html>
+<html lang="en">
 
-        {% for project in site.work %}
-            {% include project_summary.html project=project %}
-        {% endfor %}
-    </section>
-{% endif %}
+<head>
+    <meta charset="UTF-8">
+    <title>John Ellis</title>
 
-{% if site.personal.size > 0 %}
-    <section>
-        <h2>Projects</h2>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#FFFFFF"/>
 
-        {% for project in site.personal %}
-            {% include project_summary.html project=project %}
-        {% endfor %}
-    </section>
-{% endif %}
+    <link rel="preconnect" href="https://fonts.googleapis.com/" crossorigin>
+
+    <link rel="stylesheet" href="/assets/css/stylesheet.css">
+
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
+
+    <script src="https://code.iconify.design/1/1.0.7/iconify.min.js" defer></script>
+
+    {% include seo.html %}
+</head>
+
+<body>
+    <header>
+        <h1>JOHN ELLIS</h1>
+    </header>
+
+    <main>
+        <p>Software Engineering, The University of Sheffield</p>
+
+        <div class="links">
+            <a href="https://github.com/johnellis0" class="link" target="_blank" rel="noopener noreferrer">
+                <span class="iconify" data-icon="logos-github-icon" data-inline="false"></span>
+                GitHub
+                <span class="iconify ext-link" data-icon="heroicons-solid:external-link" data-inline="false"></span>
+            </a>
+        </div>
+    </main>
+</body>
+
+</html>
